# gmail-to-sqlite

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  auth.py  db.py  flake.nix  gmail-to-sqlite  main.py  message.py  messages.py  pyproject.toml  requirements.txt  setup.py  sync.py
gmail_to_sqlite/: __init__.py  __main__.py  auth.py  constants.py  db.py  main.py  message.py  migrations.py  sync.py
gmail_to_sqlite/schema_migrations/: __init__.py  v1_add_is_deleted_column.py
src/gmail_to_sqlite/: auth.py  db.py  main.py  message.py  sync.py
src/mail_to_sqlite/: auth.py  db.py  main.py  message.py  sync.py
src/mail_to_sqlite/providers/: base.py  gmail.py  imap.py
tests/: __init__.py  conftest.py  test_db.py  test_message.py  test_migrations.py  test_sync.py
